service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-service
spec:
  selector:
    app: simple-app
  ports:
    - port: 80
      targetPort: 80
