ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: simple.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-service
                port:
                  number: 80
